# ASPIRE-Python

./: .buildinfo  .bumpversion.cfg  .codecov.yml  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .isort.cfg  .readthedocs.yml  .rtd-environment.yml  .travis.yml  .zenodo.json  CODEOWNERS  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTORS.rst  Dockfile_CPU.co  Dockfile_GPU.co  LICENSE  LICENSE.md  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  appveyor.yml  aspire.abinitio.html  aspire.apple.html  aspire.basis.html  aspire.classification.html  aspire.commands.html  aspire.config.html  aspire.covariance.html  aspire.ctf.html  aspire.denoising.html  aspire.downloader.html  aspire.html  aspire.image.html  (+51 more)
Cn/: Cn_test.py  Untitled-1.py  abinitio.py  abinitio_cn.py  cn_ab_initio_readme.txt  config_symm.py  create_cache.py  data_utils.py  estimate_inplane_rot_angles.py  estimate_relative_viewing_directions.py  estimate_relative_viewing_directions_c3_c4.py  estimate_relative_viewing_directions_cn.py  estimate_rots_from_third_rows.py  estimate_third_rows.py  example_cn.py  handedness_sync.py  inplane_rot_res.mat  local_handedness_sync.py  main.py  max_shift.mat  n_symm.mat  projs.mat  reconstruct_cn.py  rots_gt.mat  shift_step.mat  stam.py  stam2.py  utils.py  utils_gt.py
_sources/: aspire.abinitio.rst.txt  aspire.apple.rst.txt  aspire.basis.rst.txt  aspire.classification.rst.txt  aspire.commands.rst.txt  aspire.config.rst.txt  aspire.covariance.rst.txt  aspire.ctf.rst.txt  aspire.denoising.rst.txt  aspire.downloader.rst.txt  aspire.image.rst.txt  aspire.noise.rst.txt  aspire.nufft.rst.txt  aspire.numeric.complex_pca.rst.txt  aspire.numeric.rst.txt  aspire.operators.rst.txt  aspire.optimization.rst.txt  aspire.reconstruction.rst.txt  aspire.rst.txt  aspire.sinogram.rst.txt  aspire.source.rst.txt  aspire.storage.rst.txt  aspire.utils.rst.txt  aspire.volume.rst.txt  authors.rst.txt  index.rst.txt  modules.rst.txt  orientation_estimation.rst.txt  quickstart.rst.txt  sg_execution_times.rst.txt
abinitio/: clean_no_shifts.mat.REMOVED.git-id  clean_no_shifts.mrcs.REMOVED.git-id  clean_with_shifts.mat.REMOVED.git-id  clean_with_shifts.mrcs.REMOVED.git-id  cryo_clmatrix_cpu_fast_v1.m  cryo_clmatrix_cpu_fast_v2.m  cryo_clmatrix_cpu_fast_v3.m  data_utils.py  main.py  noisy_snr_05_no_shifts.mat.REMOVED.git-id  noisy_snr_05_no_shifts.mrcs.REMOVED.git-id  noisy_snr_05_with_shifts.mat.REMOVED.git-id  noisy_snr_05_with_shifts.mrcs.REMOVED.git-id  projections.mrcs
aspire/: abinitio.py  class_averaging.py  config.py  helpers.py  logger.py  preprocessor.py  utils.py
aspire-python/: README.rst  setup.py
auto_experiments/: commonline_lud_simulated_data.html  example_halfset_pipeline_10028.html  experimental_abinitio_pipeline_10028.html  experimental_abinitio_pipeline_10028_jsb.html  experimental_abinitio_pipeline_10073.html  experimental_abinitio_pipeline_10073_jsb.html  experimental_abinitio_pipeline_10081.html  experimental_abinitio_pipeline_11618.html  index.html  legacy_preprocessing.html  save_simulation_relion_reconstruct.html  sg_execution_times.html  simulated_abinitio_pipeline.html
auto_tutorials/: aspire_introduction.html  configuration.html  index.html  pipeline_demo.html  sg_execution_times.html
bbenchmark/: bbenchmark.py  benchmark_gpu0.pkl  benchmark_host.pkl  plot_bb.py
class2020/: README.md  fft_transform.py  homework_practice.md  load_emd.py  numpy_tutorial.ipynb  rot_projection.py
class_avrages/: image_downsample.py  main.py  spca_data.py
docs/: Makefile  buildsite.sh  check_docstrings.py
em_classavg/: T.mat  ang_jump.mat  beta.mat  circ_shift_kernel.py  config.py  data_utils.py  em.py  em_main.py  em_main_gpu.py  em_main_old.py  em_params_scales.mat  em_params_thetas.mat  images.mat  init_avg_image.mat  init_avg_image_large.mat  is_remove_outliers.mat  mask_images_kernel.py  max_shift.mat  mean_bg_ims.mat  nIters.mat  n_scales.mat  outliers_precent_removal.mat  s_em.py  sd_bg_ims.mat  shift_jump.mat  test_circ_shift_wrapper.py  test_progressbar2.py
examples/: cov2d_simulation.py  cov3d_simulation.py  denoise_covar2d.py  image_expansion.py
gallery/: README.rst  plot_basic_image_array.py  plot_cov2d_simulation.py  plot_cov2d_simulation.py~  plot_cov3d_simulation.py  plot_cov3d_simulation.py~  plot_image_expansion.py  plot_image_expansion.py~  plot_orient3d_simulation.py  plot_orient3d_simulation.py~  plot_preprocess_imgs_sim.py  plot_preprocess_imgs_sim.py~
helpers/: helpers.py
lib/: aspirelib.py  proc2d.py  sPCA.py
notebooks/: 00_apple_picker.ipynb  00_image_class.ipynb  00_particle_picking.ipynb  01_apple_picker.ipynb  01_starfile.ipynb  02_particle_picking.ipynb  03_starfile.ipynb  monuments.npy
preprocessor/: cryo_compare_stacks.py  cryo_crop.py  cryo_downsample.py  cryo_globalphaseflip.py  cryo_prewhiten.py  cryo_workflow_preprocess_validate.py  exceptions.py
programs/: aspire_classify2D.py  aspire_viewstack.py
scripts/: apple.py  apple2.py  aspire.py  download_binaries.py  simulation.py  starfile.py
sparse-Kam/: emd_0409.mat  emd_25892.mat  generate.py  phantom64data.mat  run_simulation.py  simulate.py
tasks/: download_binaries.py
tests/: _basis_util.py  _copy_util.py  test_BOTalign.py  test_BlkDiagMatrix.py  test_BlockDiagonal.py  test_CtfEstimate.py  test_Diracbasis.py  test_FBbasis2D.py  test_FBbasis3D.py  test_FFBbasis2D.py  test_FFBbasis3D.py  test_FLEbasis2D.py  test_FLEbasis2d.py  test_FPSWFbasis2D.py  test_PSWFbasis2D.py  test_PolarBasis2D.py  test_SquaredBlkDiagMatrix.py  test_SquaredBlkDiagMatrixPerf.py  test_adaptive_support.py  test_align2d.py  test_anisotropic_noise.py  test_apple.py  test_array_image_source.py  test_averager2d.py  test_basis_container.py  test_basis_utils.py  test_basisfunc.py  test_batched_covar2d.py  test_bispectrum.py  test_blk_diagfunc.py  test_bn_matrix.py  test_bot_align.py  test_class2D.py  test_class_src.py  test_coef.py  test_commonline_matrix.py  test_commonline_sync3n.py  test_commonline_sync3n_cupy.py  test_commonline_utils.py  test_complexPCA.py  (+71 more)
(+787 files in other folders)
