[project]
name = "aspire"
version = "0.12.3"
description = "Algorithms for Single Particle Reconstruction"
readme = "README.md" # Optional
requires-python = ">=3.8"
license = {file = "LICENSE"}
maintainers = [
  {name = "ASPIRE Developers", email = "ASPIRE-DEVS@princeton.edu"}
]
authors = [
        {name = "Joakim Anden"},
        {name = "Vineet Bansal"},
        {name = "Josh Carmichael"},
        {name = "Chris Langfield"},
        {name = "Ayelet Heimowitz"},
        {name = "Yoel Shkolnisky"},
        {name = "Amit Singer"},
        {name = "Kris Sowattanangkul"},
        {name = "Garrett Wright"},
        {name = "Junchao Xia"}
]

classifiers = [
     "Development Status :: 3 - Alpha",
     "Programming Language :: Python",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

dependencies = [
    "click",
    "confuse >= 2.0.0",
    "cvxpy",
    # finufft 2.2.0 doesn't seemt to run on GHA Windows CI...
    "finufft==2.2.0 ; sys_platform != 'win32'",
    "finufft==2.1.0 ; sys_platform == 'win32'",
    "gemmi >= 0.6.5",
    "grpcio >= 1.54.2",
    "joblib",
    "matplotlib >= 3.2.0",
    "mrcfile",
    "numpy>=1.21.5, <2.0.0",
    "packaging",
    "pooch>=1.7.0",
    "pillow",
    "psutil",
    "pymanopt",
    "pyshtools<=4.10.4",  # 4.11.7 might have a packaging bug
    "PyWavelets",
    "ray >= 2.9.2",
    "scipy >= 1.10.0",
    "scikit-learn",
    "scikit-image",
    "setuptools >= 0.41",
    "tqdm",
]

[project.urls]
"Homepage" = "http://spr.math.princeton.edu/"
"Bug Reports" = "https://github.com/ComputationalCryoEM/ASPIRE-Python/issues"
"Source" = "https://github.com/ComputationalCryoEM/ASPIRE-Python"

[project.optional-dependencies]
gpu-102 = ["pycuda", "cupy-cuda102", "cufinufft==1.3"]
gpu-110 = ["pycuda", "cupy-cuda110", "cufinufft==1.3"]
gpu-111 = ["pycuda", "cupy-cuda111", "cufinufft==1.3"]
gpu-11x = ["pycuda", "cupy-cuda11x", "cufinufft==1.3"]
gpu-12x = ["pycuda", "cupy-cuda12x", "cufinufft==2.2.0"]
dev = [
    "black",
    "bumpversion",
    "check-manifest",
    "flake8 >= 3.7.0",
    "isort",
    "jupyter",
    "pooch",
    "pyflakes",
    "pydocstyle",
    "pytest",
    "pytest-cov",
    "pytest-random-order",
    "pytest-xdist",
    "requests",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-mermaid",
    "sphinx-gallery",
    "sphinx-rtd-theme >= 0.4.2",
    "snakeviz",
    "tox",
    "twine",]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
aspire = "aspire.__main__:main_entry"
